clang/test/BSC/Negative/SafeZone/deref_nullable_funcptr/deref_nullable_funcptr.cbs
// RUN: %clang_cc1 -verify %s
//
// _Nullable function pointer cannot be dereferenced without null check.

typedef _Safe int (*unary_f)(int);

_Safe int test1(unary_f f) {
    // function pointer f is _Nullable by default
    return (*f)(1); // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe int test2(unary_f _Nullable f) {
    return (*f)(1); // expected-error {{nullable pointer cannot be dereferenced}}
}
